package mp.entity;

public abstract class Schedule {
    public abstract int getId();
    public abstract String getName();
    public abstract String getOwner();
}
