package majorPlanner.entity;

public abstract class Course {
    public abstract int getId();
    public abstract String getName();
}
